--- a/life-axios/package.json
+++ b/life-axios/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo3",
+  "name": "life-axios",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.0.0",
     "core-js": "^3.8.3",
     "vue": "^2.6.14"
   },
@@ -19,8 +20,6 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "less": "^4.1.3",
-    "less-loader": "5.0.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
