--- a/shopcar-demo/package.json
+++ b/shopcar-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo3",
+  "name": "shopcar-demo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,8 +19,6 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "less": "^4.1.3",
-    "less-loader": "5.0.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
