--- a/music-demo/package.json
+++ b/music-demo/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^1.1.2",
     "core-js": "^3.8.3",
+    "postcss": "^8.4.17",
+    "postcss-pxtorem": "5.1.1",
     "vant": "^2.12.50",
     "vue": "^2.6.14",
     "vue-router": "3.5.3"
